--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,17 @@
+=== 0.1.4 2012-1-16
+
+* modify:
+  * trace logs
+  * naming risks(add bad name "to_foo")
+  * Subclass#unassign
+
+* add:
+  * Specific Conditions
+    (for Syntax Sugar of useful Functional Conditions)
+  * Subclass.#each_index
+  * Subclass.#valid?
+  * Subclass#clear_at, reset_at
+
 === 0.1.3 2012-1-10
 
 * add:
