--- a/README.ja.rdoc
+++ b/README.ja.rdoc
@@ -6,7 +6,7 @@
 
 == DESCRIPTION
 
-Structと同じかそれ以上の手軽さで扱える、Structより堅いコンテナを目指しています。
+Struct以上の手軽さで扱える、Structより堅いコンテナを目指しています。
 
 メンバ名にチェックがかかる＆一つの新しいクラスとして扱えるStructは、場面によってはHashよりも好ましい事があるかと思います。
 でもそうやってStructを使うぐらいなわけだから、値の方にもある程度のチェックをかけたいと思う事が多くありませんか？
