--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,12 @@
+=== 0.1.7 2012-1-26
+
+* add:
+  * default with Proc
+  * detail error message in Subclass.#[]=
+
+* fix
+  * class duplicating
+
 === 0.1.6 2012-1-25
 
 * delete:
