--- a/README.rdoc
+++ b/README.rdoc
@@ -152,7 +152,7 @@ Striuct = (YetAnotherStruct << safety << useful)
   Below cases for type cast.
     class User2 < Striuct.new
       member :age, Fixnum, &->v{Integer v}
-      member :name, Symbol &->v{v.to_s.to_sym}
+      member :name, Symbol, &->v{v.to_s.to_sym}
     end
     
     user2 = User2.new
