--- a/README.rdoc
+++ b/README.rdoc
@@ -62,10 +62,12 @@ examples/*
 == Requirements
 
 * Ruby 1.9.2 or later
+* validation - 0.0.3
+* keyvalidatable - 0.0.2
 
 == Installation
 
-    gem install striuct
+    $ gem install striuct
 
 == Links
 
