--- a/History.rdoc
+++ b/History.rdoc
@@ -1,7 +1,8 @@
-=== 0.3.5 2012-9-n
+=== 0.3.5 2012-9-9
 
 * fix:
   * SubClass.dup, SubClass.clone
+  * SubClass#replace_values
 
 === 0.3.4 2012-9-8
 
